# task-flow-organizer

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  pytest.ini
.github/: setup-ssh-permanent.sh
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: tasks.py
app/core/: config.py  database.py  rate_limiter.py
app/models/: task.py
app/repositories/: task_repository.py
app/services/: task_service.py
frontend/: index.html  tailwind.config.ts
frontend/src/: index.css
frontend/src/components/: DeleteConfirmDialog.tsx  Header.tsx  PriorityBadge.tsx  StatusBadge.tsx  TaskCard.tsx  TaskFilters.tsx  TaskForm.tsx  TaskList.tsx  TaskStats.tsx
frontend/src/hooks/: useTasks.ts
frontend/src/lib/: api.ts  mockData.ts
frontend/src/pages/: Index.tsx
frontend/src/types/: task.ts
tests/: conftest.py  test_rate_limiting.py  test_security.py  test_tasks.py
