[project]
name = "task-managment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "pexpect>=4.9.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.45",
    "sqlmodel>=0.0.31",
    "starlette>=0.50.0",
    "uvicorn[standard]>=0.40.0",
]
